--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 		
 		<link type="text/css" href="/css/fonts/quicksand/stylesheet.css" rel="stylesheet"/>
 		<link type="text/css" href="/css/style.css" rel="stylesheet"/>
-		<link type="text/css" href="/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="stylesheet"/>
-		<link type="text/css" href="/css/prettyPhoto.css" rel="stylesheet" media="screen" charset="utf-8"/>
+		<link type="text/css" href="/plugins/prettyPhoto/prettyPhoto.css" rel="stylesheet" media="screen" charset="utf-8"/>
 		<script type="text/javascript" src="/js/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="/js/jquery-ui-1.8.16.custom.min.js"></script>
-		<script type="text/javascript" src="/js/jquery.color.js"></script>
-		<script type="text/javascript" src="/js/jquery.prettyPhoto.js" charset="utf-8"></script>
+		<script type="text/javascript" src="/plugins/js/jquery.prettyPhoto.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/js/script.js"></script>
 		
 		<script type="text/javascript">
